secondfile/objects/DHStatus_DNS_Errors__c.object
<CustomObject>
    <description>RDS-Deal Hash--&gt;DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Errors</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>RDS-Deal Hash--&gt; DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Dragon Update Details--&gt; DHStatus-DNS Errors-Category</description>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_DNS_Dragon_Update_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash--&gt;DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Errors--&gt; DHStatus-DNS Dragon Update Details</description>
        <label>DHStatus-DNS Dragon Update Details</label>
        <referenceTo>DHStatus_DNS_Dragon_Update_Details__c</referenceTo>
        <relationshipLabel>DHStatus-DNS Errors</relationshipLabel>
        <relationshipName>DHStatus_DNS_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Identifier__c</fullName>
        <description>RDS-Deal Hash--&gt; DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Dragon Update Details--&gt; DHStatus-DNS Errors-Key Identifier</description>
        <label>Key Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>RDS-Deal Hash--&gt; DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Dragon Update Details--&gt; DHStatus-DNS Errors--&gt; Message</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>RDS-Deal Hash--&gt; DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Dragon Update Details--&gt; DHStatus-DNS Errors-Number</description>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>RDS-Deal Hash--&gt;DHStatus-Update Deal Hash Details--&gt; DHStatus-DNS Errors-Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-DNS Errors</label>
    <nameField>
        <displayFormat>DE-{00000}</displayFormat>
        <label>DHStatus-DNS Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-DNS Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>